// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProductDetailsDialog rendering tests ProductDetailsDialog - open false test 1`] = `
<div>
  <div
    data-slot="dialog"
    data-testid="product-details-dialog"
  >
    <div
      data-slot="dialog-portal"
      data-testid="mock-react-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="dialog-overlay"
        data-testid="mock-react-dialog-overlay"
      />
    </div>
  </div>
</div>
`;

exports[`ProductDetailsDialog rendering tests ProductDetailsDialog - open true - product BUNDLE - test 1`] = `
<div>
  <div
    data-slot="dialog"
    data-testid="product-details-dialog"
  >
    <div
      data-slot="dialog-portal"
      data-testid="mock-react-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="dialog-overlay"
        data-testid="mock-react-dialog-overlay"
      />
      <div
        class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 w-full translate-x-[-50%] translate-y-[-50%] gap-4 rounded-lg border shadow-lg duration-200 sm:max-w-lg max-w-6xl max-h-[90vh] p-0 overflow-hidden flex flex-col"
        data-slot="dialog-content"
        data-testid="mock-react-dialog-content"
      >
        <div
          class="px-6 pt-6"
        >
          <div
            class="flex flex-col gap-2 text-center sm:text-left sticky top-0 bg-white z-10 pb-4 border-b"
            data-slot="dialog-header"
          >
            <div
              class="flex items-start justify-between gap-4"
            >
              <div
                class="flex-1"
              >
                <div
                  class="font-semibold text-2xl mb-2"
                  data-slot="dialog-title"
                  data-testid="mock-react-dialog-title"
                >
                  name 1
                </div>
                <div
                  class="flex items-center gap-3 flex-wrap"
                >
                  <span
                    class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 bg-green-100 text-green-700 border-green-200"
                    data-slot="badge"
                  >
                    BUNDLE
                  </span>
                  <span
                    class="text-2xl font-bold text-indigo-600"
                  >
                    $
                    59.99
                  </span>
                  <span
                    class="text-sm text-slate-600 flex items-center gap-1"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-package h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
                      />
                      <path
                        d="M12 22V12"
                      />
                      <polyline
                        points="3.29 7 12 12 20.71 7"
                      />
                      <path
                        d="m7.5 4.27 9 5.15"
                      />
                    </svg>
                    3 templates included
                  </span>
                </div>
              </div>
            </div>
            <div
              class="text-base mt-3 text-slate-700"
              data-slot="dialog-description"
              data-testid="mock-react-dialog-description"
            >
              description 1
            </div>
          </div>
        </div>
        <div
          class="flex-1 overflow-y-auto px-6 py-6"
        >
          <div
            data-testid="product-details"
          >
            <div
              class="space-y-6"
              data-testid="bundle-details"
            >
              <section
                class="space-y-3"
                data-testid="bundle-value"
              >
                <h3
                  class="text-lg font-semibold text-slate-900 flex items-center gap-2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-badge-percent h-5 w-5 text-green-600"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z"
                    />
                    <path
                      d="m15 9-6 6"
                    />
                    <path
                      d="M9 9h.01"
                    />
                    <path
                      d="M15 15h.01"
                    />
                  </svg>
                  Bundle Value
                </h3>
                <div
                  class="bg-gradient-to-br from-green-50 to-emerald-50 border-2 border-green-200 rounded-lg p-6"
                >
                  <div
                    class="flex flex-col md:flex-row items-start md:items-center justify-between gap-4"
                  >
                    <div
                      class="space-y-2"
                    >
                      <div
                        class="inline-flex items-center gap-2 px-4 py-2 bg-green-100 border border-green-300 rounded-full"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-trending-down h-5 w-5 text-green-700"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 17h6v-6"
                          />
                          <path
                            d="m22 17-8.5-8.5-5 5L2 7"
                          />
                        </svg>
                        <span
                          class="text-lg font-bold text-green-800"
                        >
                          Save CHF 
                          14.98
                           (
                          26.63
                          %)
                        </span>
                      </div>
                      <p
                        class="text-sm text-green-800"
                      >
                        Get 
                        3
                         templates for the price of
                         
                        1
                        !
                      </p>
                    </div>
                    <div
                      class="flex flex-col gap-2 text-sm"
                    >
                      <div
                        class="flex items-center justify-between gap-4"
                      >
                        <span
                          class="text-slate-700"
                        >
                          Individual prices:
                        </span>
                        <span
                          class="font-medium text-slate-900 line-through"
                        >
                          CHF 
                          89.99
                        </span>
                      </div>
                      <div
                        class="flex items-center justify-between gap-4"
                      >
                        <span
                          class="text-slate-700"
                        >
                          Bundle price:
                        </span>
                        <span
                          class="font-bold text-green-700 text-lg"
                        >
                          CHF 
                          59.99
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="mt-4 pt-4 border-t border-green-200"
                  >
                    <div
                      class="flex items-start gap-2 text-sm text-green-800"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-package h-4 w-4 mt-0.5 shrink-0"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
                        />
                        <path
                          d="M12 22V12"
                        />
                        <polyline
                          points="3.29 7 12 12 20.71 7"
                        />
                        <path
                          d="m7.5 4.27 9 5.15"
                        />
                      </svg>
                      <p>
                        <strong>
                          Bundle Theme:
                        </strong>
                         This curated collection provides everything you need for comprehensive AI-assisted workflows. All templates work together seamlessly for maximum productivity.
                      </p>
                    </div>
                  </div>
                </div>
              </section>
              <div
                class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
                data-orientation="horizontal"
                data-slot="separator"
                role="none"
              />
              <section
                class="space-y-3"
                data-testid="use-cases"
              >
                <h3
                  class="text-lg font-semibold text-slate-900 flex items-center gap-2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-target h-5 w-5 text-indigo-600"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="2"
                    />
                  </svg>
                  Use Cases
                </h3>
                <div
                  class="flex flex-wrap gap-2"
                >
                  <div
                    class="inline-flex flex-col gap-1 bg-indigo-50 border border-indigo-200 rounded-lg px-3 py-2"
                  >
                    <span
                      class="font-medium text-sm text-indigo-900"
                    >
                      category 1
                    </span>
                    <span
                      class="text-xs text-indigo-700"
                    >
                      description 0
                    </span>
                  </div>
                  <div
                    class="inline-flex flex-col gap-1 bg-indigo-50 border border-indigo-200 rounded-lg px-3 py-2"
                  >
                    <span
                      class="font-medium text-sm text-indigo-900"
                    >
                      category 1
                    </span>
                    <span
                      class="text-xs text-indigo-700"
                    >
                      description 1
                    </span>
                  </div>
                  <div
                    class="inline-flex flex-col gap-1 bg-indigo-50 border border-indigo-200 rounded-lg px-3 py-2"
                  >
                    <span
                      class="font-medium text-sm text-indigo-900"
                    >
                      category 1
                    </span>
                    <span
                      class="text-xs text-indigo-700"
                    >
                      description 2
                    </span>
                  </div>
                </div>
              </section>
              <div
                class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
                data-orientation="horizontal"
                data-slot="separator"
                role="none"
              />
              <section
                class="space-y-3"
                data-testid="bundle-items"
              >
                <h3
                  class="text-lg font-semibold text-slate-900 flex items-center gap-2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-folder h-5 w-5 text-indigo-600"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
                    />
                  </svg>
                  Included Templates (
                  3
                  )
                </h3>
                <div
                  class="space-y-4"
                >
                  <div>
                    <h4
                      class="font-semibold text-sm text-slate-700 mb-2 flex items-center gap-2"
                    >
                      <span
                        class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
                        data-slot="badge"
                      >
                        category 0
                      </span>
                      <span
                        class="text-xs text-slate-500"
                      >
                        3
                         template
                        s
                      </span>
                    </h4>
                    <div
                      class="space-y-2"
                    >
                      <div
                        class="bg-slate-50 border border-slate-200 rounded-lg overflow-hidden"
                      >
                        <button
                          class="w-full flex items-center justify-between p-3 hover:bg-slate-100 transition-colors"
                        >
                          <div
                            class="flex items-center gap-2 flex-1 min-w-0"
                          >
                            <h5
                              class="font-medium text-slate-900 text-sm truncate"
                            >
                              title 0
                            </h5>
                            <span
                              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs shrink-0"
                              data-slot="badge"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-sparkles h-3 w-3 mr-1"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                                />
                                <path
                                  d="M20 2v4"
                                />
                                <path
                                  d="M22 4h-4"
                                />
                                <circle
                                  cx="4"
                                  cy="20"
                                  r="2"
                                />
                              </svg>
                              model 0
                            </span>
                          </div>
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-down h-4 w-4 text-slate-600 shrink-0"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m6 9 6 6 6-6"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="bg-slate-50 border border-slate-200 rounded-lg overflow-hidden"
                      >
                        <button
                          class="w-full flex items-center justify-between p-3 hover:bg-slate-100 transition-colors"
                        >
                          <div
                            class="flex items-center gap-2 flex-1 min-w-0"
                          >
                            <h5
                              class="font-medium text-slate-900 text-sm truncate"
                            >
                              title 1
                            </h5>
                            <span
                              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs shrink-0"
                              data-slot="badge"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-sparkles h-3 w-3 mr-1"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                                />
                                <path
                                  d="M20 2v4"
                                />
                                <path
                                  d="M22 4h-4"
                                />
                                <circle
                                  cx="4"
                                  cy="20"
                                  r="2"
                                />
                              </svg>
                              model 1
                            </span>
                          </div>
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-down h-4 w-4 text-slate-600 shrink-0"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m6 9 6 6 6-6"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="bg-slate-50 border border-slate-200 rounded-lg overflow-hidden"
                      >
                        <button
                          class="w-full flex items-center justify-between p-3 hover:bg-slate-100 transition-colors"
                        >
                          <div
                            class="flex items-center gap-2 flex-1 min-w-0"
                          >
                            <h5
                              class="font-medium text-slate-900 text-sm truncate"
                            >
                              title 2
                            </h5>
                            <span
                              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs shrink-0"
                              data-slot="badge"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-sparkles h-3 w-3 mr-1"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                                />
                                <path
                                  d="M20 2v4"
                                />
                                <path
                                  d="M22 4h-4"
                                />
                                <circle
                                  cx="4"
                                  cy="20"
                                  r="2"
                                />
                              </svg>
                              model 2
                            </span>
                          </div>
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-down h-4 w-4 text-slate-600 shrink-0"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m6 9 6 6 6-6"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div>
                    <h4
                      class="font-semibold text-sm text-slate-700 mb-2 flex items-center gap-2"
                    >
                      <span
                        class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
                        data-slot="badge"
                      >
                        category 1
                      </span>
                      <span
                        class="text-xs text-slate-500"
                      >
                        3
                         template
                        s
                      </span>
                    </h4>
                    <div
                      class="space-y-2"
                    >
                      <div
                        class="bg-slate-50 border border-slate-200 rounded-lg overflow-hidden"
                      >
                        <button
                          class="w-full flex items-center justify-between p-3 hover:bg-slate-100 transition-colors"
                        >
                          <div
                            class="flex items-center gap-2 flex-1 min-w-0"
                          >
                            <h5
                              class="font-medium text-slate-900 text-sm truncate"
                            >
                              title 0
                            </h5>
                            <span
                              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs shrink-0"
                              data-slot="badge"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-sparkles h-3 w-3 mr-1"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                                />
                                <path
                                  d="M20 2v4"
                                />
                                <path
                                  d="M22 4h-4"
                                />
                                <circle
                                  cx="4"
                                  cy="20"
                                  r="2"
                                />
                              </svg>
                              model 0
                            </span>
                          </div>
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-down h-4 w-4 text-slate-600 shrink-0"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m6 9 6 6 6-6"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="bg-slate-50 border border-slate-200 rounded-lg overflow-hidden"
                      >
                        <button
                          class="w-full flex items-center justify-between p-3 hover:bg-slate-100 transition-colors"
                        >
                          <div
                            class="flex items-center gap-2 flex-1 min-w-0"
                          >
                            <h5
                              class="font-medium text-slate-900 text-sm truncate"
                            >
                              title 1
                            </h5>
                            <span
                              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs shrink-0"
                              data-slot="badge"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-sparkles h-3 w-3 mr-1"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                                />
                                <path
                                  d="M20 2v4"
                                />
                                <path
                                  d="M22 4h-4"
                                />
                                <circle
                                  cx="4"
                                  cy="20"
                                  r="2"
                                />
                              </svg>
                              model 1
                            </span>
                          </div>
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-down h-4 w-4 text-slate-600 shrink-0"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m6 9 6 6 6-6"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="bg-slate-50 border border-slate-200 rounded-lg overflow-hidden"
                      >
                        <button
                          class="w-full flex items-center justify-between p-3 hover:bg-slate-100 transition-colors"
                        >
                          <div
                            class="flex items-center gap-2 flex-1 min-w-0"
                          >
                            <h5
                              class="font-medium text-slate-900 text-sm truncate"
                            >
                              title 2
                            </h5>
                            <span
                              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs shrink-0"
                              data-slot="badge"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-sparkles h-3 w-3 mr-1"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                                />
                                <path
                                  d="M20 2v4"
                                />
                                <path
                                  d="M22 4h-4"
                                />
                                <circle
                                  cx="4"
                                  cy="20"
                                  r="2"
                                />
                              </svg>
                              model 2
                            </span>
                          </div>
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-down h-4 w-4 text-slate-600 shrink-0"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m6 9 6 6 6-6"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div>
                    <h4
                      class="font-semibold text-sm text-slate-700 mb-2 flex items-center gap-2"
                    >
                      <span
                        class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
                        data-slot="badge"
                      >
                        category 2
                      </span>
                      <span
                        class="text-xs text-slate-500"
                      >
                        3
                         template
                        s
                      </span>
                    </h4>
                    <div
                      class="space-y-2"
                    >
                      <div
                        class="bg-slate-50 border border-slate-200 rounded-lg overflow-hidden"
                      >
                        <button
                          class="w-full flex items-center justify-between p-3 hover:bg-slate-100 transition-colors"
                        >
                          <div
                            class="flex items-center gap-2 flex-1 min-w-0"
                          >
                            <h5
                              class="font-medium text-slate-900 text-sm truncate"
                            >
                              title 0
                            </h5>
                            <span
                              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs shrink-0"
                              data-slot="badge"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-sparkles h-3 w-3 mr-1"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                                />
                                <path
                                  d="M20 2v4"
                                />
                                <path
                                  d="M22 4h-4"
                                />
                                <circle
                                  cx="4"
                                  cy="20"
                                  r="2"
                                />
                              </svg>
                              model 0
                            </span>
                          </div>
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-down h-4 w-4 text-slate-600 shrink-0"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m6 9 6 6 6-6"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="bg-slate-50 border border-slate-200 rounded-lg overflow-hidden"
                      >
                        <button
                          class="w-full flex items-center justify-between p-3 hover:bg-slate-100 transition-colors"
                        >
                          <div
                            class="flex items-center gap-2 flex-1 min-w-0"
                          >
                            <h5
                              class="font-medium text-slate-900 text-sm truncate"
                            >
                              title 1
                            </h5>
                            <span
                              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs shrink-0"
                              data-slot="badge"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-sparkles h-3 w-3 mr-1"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                                />
                                <path
                                  d="M20 2v4"
                                />
                                <path
                                  d="M22 4h-4"
                                />
                                <circle
                                  cx="4"
                                  cy="20"
                                  r="2"
                                />
                              </svg>
                              model 1
                            </span>
                          </div>
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-down h-4 w-4 text-slate-600 shrink-0"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m6 9 6 6 6-6"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="bg-slate-50 border border-slate-200 rounded-lg overflow-hidden"
                      >
                        <button
                          class="w-full flex items-center justify-between p-3 hover:bg-slate-100 transition-colors"
                        >
                          <div
                            class="flex items-center gap-2 flex-1 min-w-0"
                          >
                            <h5
                              class="font-medium text-slate-900 text-sm truncate"
                            >
                              title 2
                            </h5>
                            <span
                              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs shrink-0"
                              data-slot="badge"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-sparkles h-3 w-3 mr-1"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                                />
                                <path
                                  d="M20 2v4"
                                />
                                <path
                                  d="M22 4h-4"
                                />
                                <circle
                                  cx="4"
                                  cy="20"
                                  r="2"
                                />
                              </svg>
                              model 2
                            </span>
                          </div>
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-down h-4 w-4 text-slate-600 shrink-0"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m6 9 6 6 6-6"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
              <div
                class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
                data-orientation="horizontal"
                data-slot="separator"
                role="none"
              />
              <div
                class="bg-indigo-50 border border-indigo-200 rounded-lg p-4"
              >
                <h4
                  class="font-semibold text-sm text-indigo-900 mb-2"
                >
                  What You'll Get
                </h4>
                <ul
                  class="space-y-1 text-sm text-indigo-800"
                >
                  <li
                    class="flex items-start gap-2"
                  >
                    <span
                      class="shrink-0"
                    >
                      ✓
                    </span>
                    <span>
                      3
                       professionally crafted prompt templates
                    </span>
                  </li>
                  <li
                    class="flex items-start gap-2"
                  >
                    <span
                      class="shrink-0"
                    >
                      ✓
                    </span>
                    <span>
                      Optimized for multiple AI models and use cases
                    </span>
                  </li>
                  <li
                    class="flex items-start gap-2"
                  >
                    <span
                      class="shrink-0"
                    >
                      ✓
                    </span>
                    <span>
                      Immediate access
                    </span>
                  </li>
                  <li
                    class="flex items-start gap-2"
                  >
                    <span
                      class="shrink-0"
                    >
                      ✓
                    </span>
                    <span>
                      Ready-to-use templates with clear instructions
                    </span>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col-reverse gap-2 sm:flex-row sm:justify-end sticky bottom-0 border-t bg-white px-6 py-4"
          data-slot="dialog-footer"
        >
          <div
            class="flex flex-col sm:flex-row gap-3 w-full"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-10 rounded-md px-6 has-[>svg]:px-4 sm:mr-auto"
              data-slot="button"
              data-testid="mock-link"
              href="/products/334db648-f300-4284-8149-075ff465d751"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-external-link h-4 w-4 mr-2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 3h6v6"
                />
                <path
                  d="M10 14 21 3"
                />
                <path
                  d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
                />
              </svg>
              View Full Page
            </a>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 flex-1 cursor-pointer"
              data-slot="button"
              data-testid="add-to-cart-btn"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shopping-cart w-4 h-4 mr-2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="21"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="21"
                  r="1"
                />
                <path
                  d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                />
              </svg>
              <span>
                  Add to Cart
              </span>
            </button>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4"
              data-slot="button"
              data-testid="close-dialog-btn"
            >
              Close
            </button>
          </div>
        </div>
        <button>
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="sr-only"
          >
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductDetailsDialog rendering tests ProductDetailsDialog - open true - product TEMPLATE - test 1`] = `
<div>
  <div
    data-slot="dialog"
    data-testid="product-details-dialog"
  >
    <div
      data-slot="dialog-portal"
      data-testid="mock-react-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="dialog-overlay"
        data-testid="mock-react-dialog-overlay"
      />
      <div
        class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 w-full translate-x-[-50%] translate-y-[-50%] gap-4 rounded-lg border shadow-lg duration-200 sm:max-w-lg max-w-6xl max-h-[90vh] p-0 overflow-hidden flex flex-col"
        data-slot="dialog-content"
        data-testid="mock-react-dialog-content"
      >
        <div
          class="px-6 pt-6"
        >
          <div
            class="flex flex-col gap-2 text-center sm:text-left sticky top-0 bg-white z-10 pb-4 border-b"
            data-slot="dialog-header"
          >
            <div
              class="flex items-start justify-between gap-4"
            >
              <div
                class="flex-1"
              >
                <div
                  class="font-semibold text-2xl mb-2"
                  data-slot="dialog-title"
                  data-testid="mock-react-dialog-title"
                >
                  name 1
                </div>
                <div
                  class="flex items-center gap-3 flex-wrap"
                >
                  <span
                    class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 bg-blue-100 text-blue-700 border-blue-200"
                    data-slot="badge"
                  >
                    TEMPLATE
                  </span>
                  <span
                    class="text-2xl font-bold text-indigo-600"
                  >
                    $
                    59.99
                  </span>
                </div>
              </div>
            </div>
            <div
              class="text-base mt-3 text-slate-700"
              data-slot="dialog-description"
              data-testid="mock-react-dialog-description"
            >
              description 1
            </div>
          </div>
        </div>
        <div
          class="flex-1 overflow-y-auto px-6 py-6"
        >
          <div
            data-testid="product-details"
          >
            <div
              class="space-y-6"
              data-testid="template-details"
            >
              <section
                class="space-y-3"
                data-testid="key-features"
              >
                <h3
                  class="text-lg font-semibold text-slate-900 flex items-center gap-2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-sparkles h-5 w-5 text-indigo-600"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                    />
                    <path
                      d="M20 2v4"
                    />
                    <path
                      d="M22 4h-4"
                    />
                    <circle
                      cx="4"
                      cy="20"
                      r="2"
                    />
                  </svg>
                  Key Features
                </h3>
                <div
                  class="grid grid-cols-1 md:grid-cols-2 gap-3"
                >
                  <div
                    class="bg-slate-50 border border-slate-200 rounded-lg p-4"
                    data-testid="feature"
                  >
                    <div
                      class="flex items-start gap-3"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-check h-5 w-5 text-indigo-600 mt-0.5 shrink-0"
                        data-testid="icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 6 9 17l-5-5"
                        />
                      </svg>
                      <div>
                        <h4
                          class="font-medium text-slate-900 text-sm"
                          data-testid="title"
                        >
                          title 0
                        </h4>
                        <p
                          class="text-xs text-slate-600 mt-1"
                          data-testid="description"
                        >
                          description 0
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bg-slate-50 border border-slate-200 rounded-lg p-4"
                    data-testid="feature"
                  >
                    <div
                      class="flex items-start gap-3"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-check h-5 w-5 text-indigo-600 mt-0.5 shrink-0"
                        data-testid="icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 6 9 17l-5-5"
                        />
                      </svg>
                      <div>
                        <h4
                          class="font-medium text-slate-900 text-sm"
                          data-testid="title"
                        >
                          title 1
                        </h4>
                        <p
                          class="text-xs text-slate-600 mt-1"
                          data-testid="description"
                        >
                          description 1
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bg-slate-50 border border-slate-200 rounded-lg p-4"
                    data-testid="feature"
                  >
                    <div
                      class="flex items-start gap-3"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-check h-5 w-5 text-indigo-600 mt-0.5 shrink-0"
                        data-testid="icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 6 9 17l-5-5"
                        />
                      </svg>
                      <div>
                        <h4
                          class="font-medium text-slate-900 text-sm"
                          data-testid="title"
                        >
                          title 2
                        </h4>
                        <p
                          class="text-xs text-slate-600 mt-1"
                          data-testid="description"
                        >
                          description 2
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
              <div
                class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
                data-orientation="horizontal"
                data-slot="separator"
                role="none"
              />
              <section
                class="space-y-3"
                data-testid="use-cases"
              >
                <h3
                  class="text-lg font-semibold text-slate-900 flex items-center gap-2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-target h-5 w-5 text-indigo-600"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="2"
                    />
                  </svg>
                  Use Cases
                </h3>
                <div
                  class="flex flex-wrap gap-2"
                >
                  <div
                    class="inline-flex flex-col gap-1 bg-indigo-50 border border-indigo-200 rounded-lg px-3 py-2"
                  >
                    <span
                      class="font-medium text-sm text-indigo-900"
                    >
                      category 1
                    </span>
                    <span
                      class="text-xs text-indigo-700"
                    >
                      description 0
                    </span>
                  </div>
                  <div
                    class="inline-flex flex-col gap-1 bg-indigo-50 border border-indigo-200 rounded-lg px-3 py-2"
                  >
                    <span
                      class="font-medium text-sm text-indigo-900"
                    >
                      category 1
                    </span>
                    <span
                      class="text-xs text-indigo-700"
                    >
                      description 1
                    </span>
                  </div>
                  <div
                    class="inline-flex flex-col gap-1 bg-indigo-50 border border-indigo-200 rounded-lg px-3 py-2"
                  >
                    <span
                      class="font-medium text-sm text-indigo-900"
                    >
                      category 1
                    </span>
                    <span
                      class="text-xs text-indigo-700"
                    >
                      description 2
                    </span>
                  </div>
                </div>
              </section>
              <div
                class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
                data-orientation="horizontal"
                data-slot="separator"
                role="none"
              />
              <section
                class="space-y-3"
                data-testid="template-preview"
              >
                <div
                  class="flex items-center justify-between"
                >
                  <h3
                    class="text-lg font-semibold text-slate-900 flex items-center gap-2"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-code h-5 w-5 text-indigo-600"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m16 18 6-6-6-6"
                      />
                      <path
                        d="m8 6-6 6 6 6"
                      />
                    </svg>
                    Template Preview
                  </h3>
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md px-3 has-[>svg]:px-2.5 gap-2"
                    data-slot="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-copy h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="14"
                        rx="2"
                        ry="2"
                        width="14"
                        x="8"
                        y="8"
                      />
                      <path
                        d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                      />
                    </svg>
                    Copy
                  </button>
                </div>
                <div
                  class="bg-slate-50 border border-slate-200 rounded-lg overflow-hidden"
                >
                  <div
                    class="border-b last:border-b-0"
                  >
                    <div
                      class="p-4 max-h-96 overflow-y-auto font-mono text-sm"
                    >
                      <div
                        class="flex items-start py-0.5"
                      >
                        <span>
                          <span
                            class="text-slate-400 select-none mr-4 font-mono text-xs"
                          >
                              1
                          </span>
                        </span>
                        <span
                          class="text-slate-700"
                        >
                          content 1
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
              <div
                class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
                data-orientation="horizontal"
                data-slot="separator"
                role="none"
              />
              <section
                class="space-y-3"
                data-testid="usage-instructions"
              >
                <h3
                  class="text-lg font-semibold text-slate-900 flex items-center gap-2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-book-open h-5 w-5 text-indigo-600"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 7v14"
                    />
                    <path
                      d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
                    />
                  </svg>
                  How to Use
                </h3>
                <div
                  class="space-y-3"
                >
                  <div
                    class="flex items-start gap-3 bg-slate-50 border border-slate-200 rounded-lg p-4"
                  >
                    <div
                      class="flex items-center justify-center w-8 h-8 bg-indigo-100 text-indigo-700 rounded-full font-bold text-sm shrink-0"
                    >
                      0
                    </div>
                    <div
                      class="flex-1 min-w-0"
                    >
                      <h4
                        class="font-medium text-slate-900 text-sm"
                      >
                        title 0
                      </h4>
                      <p
                        class="text-xs text-slate-600 mt-1"
                      >
                        description 0
                      </p>
                    </div>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-check h-5 w-5 text-slate-300 shrink-0"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <path
                        d="m9 12 2 2 4-4"
                      />
                    </svg>
                  </div>
                  <div
                    class="flex items-start gap-3 bg-slate-50 border border-slate-200 rounded-lg p-4"
                  >
                    <div
                      class="flex items-center justify-center w-8 h-8 bg-indigo-100 text-indigo-700 rounded-full font-bold text-sm shrink-0"
                    >
                      1
                    </div>
                    <div
                      class="flex-1 min-w-0"
                    >
                      <h4
                        class="font-medium text-slate-900 text-sm"
                      >
                        title 1
                      </h4>
                      <p
                        class="text-xs text-slate-600 mt-1"
                      >
                        description 1
                      </p>
                    </div>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-check h-5 w-5 text-slate-300 shrink-0"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <path
                        d="m9 12 2 2 4-4"
                      />
                    </svg>
                  </div>
                  <div
                    class="flex items-start gap-3 bg-slate-50 border border-slate-200 rounded-lg p-4"
                  >
                    <div
                      class="flex items-center justify-center w-8 h-8 bg-indigo-100 text-indigo-700 rounded-full font-bold text-sm shrink-0"
                    >
                      2
                    </div>
                    <div
                      class="flex-1 min-w-0"
                    >
                      <h4
                        class="font-medium text-slate-900 text-sm"
                      >
                        title 2
                      </h4>
                      <p
                        class="text-xs text-slate-600 mt-1"
                      >
                        description 2
                      </p>
                    </div>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-check h-5 w-5 text-slate-300 shrink-0"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <path
                        d="m9 12 2 2 4-4"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="bg-blue-50 border border-blue-200 rounded-lg p-4 text-sm text-blue-800"
                >
                  <p
                    class="flex items-start gap-2"
                  >
                    <span
                      class="font-semibold shrink-0"
                    >
                      💡 Tip:
                    </span>
                    <span>
                      Customize the template to match your specific needs and tone. The placeholders are suggestions - feel free to adapt them!
                    </span>
                  </p>
                </div>
              </section>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col-reverse gap-2 sm:flex-row sm:justify-end sticky bottom-0 border-t bg-white px-6 py-4"
          data-slot="dialog-footer"
        >
          <div
            class="flex flex-col sm:flex-row gap-3 w-full"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-10 rounded-md px-6 has-[>svg]:px-4 sm:mr-auto"
              data-slot="button"
              data-testid="mock-link"
              href="/products/334db648-f300-4284-8149-075ff465d751"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-external-link h-4 w-4 mr-2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 3h6v6"
                />
                <path
                  d="M10 14 21 3"
                />
                <path
                  d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
                />
              </svg>
              View Full Page
            </a>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 flex-1 cursor-pointer"
              data-slot="button"
              data-testid="add-to-cart-btn"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shopping-cart w-4 h-4 mr-2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="21"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="21"
                  r="1"
                />
                <path
                  d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                />
              </svg>
              <span>
                  Add to Cart
              </span>
            </button>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4"
              data-slot="button"
              data-testid="close-dialog-btn"
            >
              Close
            </button>
          </div>
        </div>
        <button>
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="sr-only"
          >
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
